--- a/meta/broken.in
+++ b/meta/broken.in
@@ -1,5 +1,6 @@
 name="broken"
 version="@version@"
 description="Testing Framework"
+requires = "unix"
 archive(byte) = "broken.cma"
 archive(native) = "broken.cmxa"
