Modify modest apsects of the interface
- Fix usage message.
- Use unit_testing rather than unit-testing in the trip-trap test

--- a/testsuite/trip-trap/Makefile
+++ b/testsuite/trip-trap/Makefile
@@ -11,7 +11,7 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-PROGRAM=		unit-testing
+PROGRAM=		unit_testing
 SRCS+=			main.ml
 
 EXTERNAL=		ocaml.findlib:unix
