Fix version macro

--- a/meta/broken.in
+++ b/meta/broken.in
@@ -1,5 +1,5 @@
 name="broken"
-version="@version@"
+version="@VERSION@"
 description="Testing Framework"
 requires = "unix"
 archive(byte) = "broken.cma"
