Require the unix package

--- a/configure.ac
+++ b/configure.ac
@@ -15,6 +15,7 @@ AC_INIT([meta/broken.in])
 AC_CONFIG_MACRO_DIR([Library/Autoconf])
 AC_NEED_OCAML
 AC_NEED_FINDLIB
+AC_NEED_FINDLIB_PKG([unix])
 AC_WITH_OCAML_SITE_LIB
 AC_CONFIG_FILES([Makefile.config])
 AC_OUTPUT
