--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ addons:
     - ocaml
     - opam
     - ocaml-native-compilers
-install: sh -ex ./Library/Ancillary/autoinstall bmake bsdowl ocamlfind
+install: sh -ex ./Library/Ancillary/autoinstall bmake bsdowl opam
 script: sh -ex ./Library/Ancillary/travisci
